--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ VITE_FIREBASE_PROJECT_ID=hu-ethics-club
 VITE_FIREBASE_STORAGE_BUCKET=hu-ethics-club.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=273422042680
 VITE_FIREBASE_APP_ID=1:273422042680:web:7cc2d53ded61a4539c48cd
+
+# Cloudinary Configuration
+VITE_CLOUDINARY_CLOUD_NAME=humsjis
+VITE_CLOUDINARY_API_KEY=117465414766653
+VITE_CLOUDINARY_API_SECRET=w-6S-6EO_tO0dAYVUN7FILUHpxw
