--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ VITE_FIREBASE_APP_ID=1:273422042680:web:7cc2d53ded61a4539c48cd
 VITE_CLOUDINARY_CLOUD_NAME=humsjis
 VITE_CLOUDINARY_API_KEY=117465414766653
 VITE_CLOUDINARY_API_SECRET=w-6S-6EO_tO0dAYVUN7FILUHpxw
+
+# Telegram Bot Configuration
+VITE_TELEGRAM_BOT_TOKEN=YOUR_BOT_TOKEN_HERE
+VITE_TELEGRAM_CHANNEL_ID=YOUR_CHANNEL_ID_HERE
